--- a/assignments/assignment4.Rmd
+++ b/assignments/assignment4.Rmd
@@ -17,13 +17,52 @@ fish_data <- read.table("data/fish.txt",
   rename("species" = x) %>% 
   drop_na()
 
-fish_factor <- as.factor(fish_data)
+fish_factor <- as.factor(fish_data$species)
 summary(fish_factor)
 
 source("R/fish_fun.R")
 
-fish_summary <- fish_fun(species = fish_factor)
+fish_fun(species = fish_factor, hist = TRUE)
+```
 
-fish_summary
+```{r}
+species <- fish_factor
+
+ggplot(data.frame(species), 
+                      aes(x = species, fill = species)) + 
+    geom_histogram(stat = "count") + 
+    theme_minimal() +
+    labs(title = sprintf("We mostly caught %s \n max catch(%d)", 
+                         names(which.max(summary(species))), 
+                         max(summary(species))))
+```
+
+
+
+```{r}
+## Assignment 4
+## Function that takes a vector of fish names and always returns three items
+# common = most common fish
+# rare = rarest fish
+# total = total number of fish
+# input data should be a factor
+
+#  include an option (defaulted to FALSE) that if TRUE also returns a histogram of the number of each fish type, with a title giving the total number of fish caught.  Remember that you can save a graph as a variable.
+
+fish_fun <- function(species, common, rare, total, hist = FALSE){
+  require(tidyverse)
+  common = which.max(summary(species))
+  rare = which.min(summary(species))
+  total = sum(summary(species))
+  histogram <- ggplot(data.frame(species), 
+                      aes(x = species, fill = species)) + 
+    geom_histogram(stat = "count") + 
+    theme_minimal() +
+    labs(title = sprintf("We mostly caught %s \n max catch(%d)", 
+                         names(which.max(summary(species))), 
+                         max(summary(species))))
+  return(list(common = common, rare = rare, total = total) & if (hist == TRUE) return(histogram))
+   
+}
 ```
 
